syntax = "proto3";

package mizer.plan;

import "fixtures.proto";

service PlansApi {
  rpc GetPlans (PlansRequest) returns (Plans) {}
  rpc AddPlan (AddPlanRequest) returns (Plans) {}
  rpc RemovePlan (RemovePlanRequest) returns (Plans) {}
  rpc RenamePlan (RenamePlanRequest) returns (Plans) {}
  rpc MoveFixtures (MoveFixturesRequest) returns (Plans) {}
  rpc MoveFixture (MoveFixtureRequest) returns (Plans) {}
  rpc AlignFixtures (AlignFixturesRequest) returns (Plans) {}
}

message PlansRequest {
}

message AddPlanRequest {
  string name = 1;
}

message RemovePlanRequest {
  string id = 1;
}

message RenamePlanRequest {
  string id = 1;
  string name = 2;
}

message MoveFixturesRequest {
  string plan_id = 1;
  int32 x = 2;
  int32 y = 3;
}

message AlignFixturesRequest {
  string plan_id = 1;
  AlignDirection direction = 2;
  uint32 groups = 3;
  uint32 row_gap = 4;
  uint32 column_gap = 5;

  enum AlignDirection {
    LEFT_TO_RIGHT = 0;
    TOP_TO_BOTTOM = 1;
  }
}

message MoveFixtureRequest {
  string plan_id = 1;
  mizer.fixtures.FixtureId fixture_id = 2;
  int32 x = 3;
  int32 y = 4;
}

message Plans {
  repeated Plan plans = 1;
}

message Plan {
  string name = 1;
  repeated FixturePosition positions = 2;
  repeated PlanScreen screens = 3;
}

message FixturePosition {
  mizer.fixtures.FixtureId id = 1;
  int32 x = 2;
  int32 y = 3;
  uint32 width = 4;
  uint32 height = 5;
}

message PlanScreen {
  uint32 id = 1;
  int32 x = 2;
  int32 y = 3;
  uint32 width = 4;
  uint32 height = 5;
}
